--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
 html,
+div {
+    display:table;
+    position:relative;
+    margin:0 auto;
+}
+iframe + iframe {
+    position:absolute;
+    left:0;
+    top:0;
+    right:0;
+    bottom:0;
+    margin:auto;
+    pointer-events:none
+}
 body {
   padding: 0;
   margin: 0 auto;
