--- a/style.css
+++ b/style.css
@@ -289,4 +289,14 @@ span.legend-icon {
 .ladder form, .ladder div {
   display: block;
 }
-
+div {
+    display:table;
+    position:relative;
+    margin:0 auto;
+}
+iframe + iframe {
+    position:absolute;
+   
+    margin:auto;
+    pointer-events:none
+}
