--- a/style.css
+++ b/style.css
@@ -296,7 +296,10 @@ div {
 }
 iframe + iframe {
     position:absolute;
-   
+    left:0;
+    top:0;
+    right:0;
+    bottom:0;
     margin:auto;
     pointer-events:none
 }
