--- a/style.css
+++ b/style.css
@@ -257,8 +257,8 @@ select {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
   padding-top: 10px;
 }
 
