--- a/style.css
+++ b/style.css
@@ -257,8 +257,8 @@ select {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: left;
-  align-items: left;
+  justify-content: center;
+  align-items: center;
   padding-top: 10px;
 }
 
@@ -289,17 +289,4 @@ span.legend-icon {
 .ladder form, .ladder div {
   display: block;
 }
-div {
-    display:table;
-    position:relative;
-    margin:0 auto;
-}
-iframe + iframe {
-    position:absolute;
-    left:0;
-    top:0;
-    right:0;
-    bottom:0;
-    margin:auto;
-    pointer-events:none
-}
+
