--- a/style2.css
+++ b/style2.css
@@ -2,7 +2,7 @@
 div {
     display:table;
     position:relative;
-    margin:0;
+    margin:0 auto;
 }
 iframe + iframe {
     position:absolute;
@@ -10,7 +10,7 @@ iframe + iframe {
     top:0;
     right:0;
     bottom:0;
-    margin:0;
+    margin:0 auto;
     pointer-events:none
 }
 
